# learn_airflow

./: README.md
logs/scheduler/: latest
project/: Dockerfile  docker-compose.yml  pyproject.toml
project/dags/: first_dag.py
